--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
 			}
 
 			void main() {
-				if(rand(vUv) < 0.01) {
+				/*
+				if(rand(vUv) < 0.000000000000000000001) {
+					gl_FragColor = vec4(1,0,1,1);
+				}
+				else {
+					gl_FragColor = vec4(0,0,0,0);
+				}
+				*/
+
+				if(vUv.x > 0.5 && vUv.x < 0.55 && vUv.y > 0.5 && vUv.y < 0.55) {
 					gl_FragColor = vec4(1,0,1,1);
 				}
 				else {
@@ -46,15 +55,118 @@
 		</script>
 
 		<script type="x-shader/x-fragment" id="antFragmentShader">
+			#define W_DIM 23
+			#define N_SENS 9
+
 			uniform sampler2D antTexture;
 			uniform sampler2D livingTexture;
-			uniform vec2 sensoryVectors[5];
-			uniform float sensoryWeights[5];
+			uniform vec2 sensoryVectors[N_SENS];
+			uniform float sensoryWeights[N_SENS];
 
 			uniform float dx;
 			uniform float dy;
 
 			varying vec2 vUv;
+
+			vec4 mod289(vec4 x)
+{
+  return x - floor(x * (1.0 / 289.0)) * 289.0;
+}
+
+vec4 permute(vec4 x)
+{
+  return mod289(((x*34.0)+1.0)*x);
+}
+
+vec4 taylorInvSqrt(vec4 r)
+{
+  return 1.79284291400159 - 0.85373472095314 * r;
+}
+
+vec2 fade(vec2 t) {
+  return t*t*t*(t*(t*6.0-15.0)+10.0);
+}
+
+// Classic Perlin noise
+float cnoise(vec2 P)
+{
+  vec4 Pi = floor(P.xyxy) + vec4(0.0, 0.0, 1.0, 1.0);
+  vec4 Pf = fract(P.xyxy) - vec4(0.0, 0.0, 1.0, 1.0);
+  Pi = mod289(Pi); // To avoid truncation effects in permutation
+  vec4 ix = Pi.xzxz;
+  vec4 iy = Pi.yyww;
+  vec4 fx = Pf.xzxz;
+  vec4 fy = Pf.yyww;
+
+  vec4 i = permute(permute(ix) + iy);
+
+  vec4 gx = fract(i * (1.0 / 41.0)) * 2.0 - 1.0 ;
+  vec4 gy = abs(gx) - 0.5 ;
+  vec4 tx = floor(gx + 0.5);
+  gx = gx - tx;
+
+  vec2 g00 = vec2(gx.x,gy.x);
+  vec2 g10 = vec2(gx.y,gy.y);
+  vec2 g01 = vec2(gx.z,gy.z);
+  vec2 g11 = vec2(gx.w,gy.w);
+
+  vec4 norm = taylorInvSqrt(vec4(dot(g00, g00), dot(g01, g01), dot(g10, g10), dot(g11, g11)));
+  g00 *= norm.x;
+  g01 *= norm.y;
+  g10 *= norm.z;
+  g11 *= norm.w;
+
+  float n00 = dot(g00, vec2(fx.x, fy.x));
+  float n10 = dot(g10, vec2(fx.y, fy.y));
+  float n01 = dot(g01, vec2(fx.z, fy.z));
+  float n11 = dot(g11, vec2(fx.w, fy.w));
+
+  vec2 fade_xy = fade(Pf.xy);
+  vec2 n_x = mix(vec2(n00, n01), vec2(n10, n11), fade_xy.x);
+  float n_xy = mix(n_x.x, n_x.y, fade_xy.y);
+  return 2.3 * n_xy;
+}
+
+// Classic Perlin noise, periodic variant
+float pnoise(vec2 P, vec2 rep)
+{
+  vec4 Pi = floor(P.xyxy) + vec4(0.0, 0.0, 1.0, 1.0);
+  vec4 Pf = fract(P.xyxy) - vec4(0.0, 0.0, 1.0, 1.0);
+  Pi = mod(Pi, rep.xyxy); // To create noise with explicit period
+  Pi = mod289(Pi);        // To avoid truncation effects in permutation
+  vec4 ix = Pi.xzxz;
+  vec4 iy = Pi.yyww;
+  vec4 fx = Pf.xzxz;
+  vec4 fy = Pf.yyww;
+
+  vec4 i = permute(permute(ix) + iy);
+
+  vec4 gx = fract(i * (1.0 / 41.0)) * 2.0 - 1.0 ;
+  vec4 gy = abs(gx) - 0.5 ;
+  vec4 tx = floor(gx + 0.5);
+  gx = gx - tx;
+
+  vec2 g00 = vec2(gx.x,gy.x);
+  vec2 g10 = vec2(gx.y,gy.y);
+  vec2 g01 = vec2(gx.z,gy.z);
+  vec2 g11 = vec2(gx.w,gy.w);
+
+  vec4 norm = taylorInvSqrt(vec4(dot(g00, g00), dot(g01, g01), dot(g10, g10), dot(g11, g11)));
+  g00 *= norm.x;
+  g01 *= norm.y;
+  g10 *= norm.z;
+  g11 *= norm.w;
+
+  float n00 = dot(g00, vec2(fx.x, fy.x));
+  float n10 = dot(g10, vec2(fx.y, fy.y));
+  float n01 = dot(g01, vec2(fx.z, fy.z));
+  float n11 = dot(g11, vec2(fx.w, fy.w));
+
+  vec2 fade_xy = fade(Pf.xy);
+  vec2 n_x = mix(vec2(n00, n01), vec2(n10, n11), fade_xy.x);
+  float n_xy = mix(n_x.x, n_x.y, fade_xy.y);
+  return 2.3 * n_xy;
+}
 
 			vec2 rotate(vec2 v, float angle) {
 				mat3 rotation = mat3(
@@ -68,22 +180,27 @@
 
 			vec2 move(vec2 point) {
 				vec2 dp = vec2(0,0);
-				for(int i=0; i<5; i++) {
+				for(int i=0; i<N_SENS; i++) {
 					float wi = sensoryWeights[i];
 
 					vec2 dir = vec2(texture2D(antTexture, point).x - 0.5, texture2D(antTexture, point).y - 0.5);
 
 					float angle = acos(dot(vec2(1.0, 0.0), dir) / length(dir));
 
-					vec2  sv = normalize(rotate(sensoryVectors[i], angle));
+					vec2 sv = rotate(normalize(sensoryVectors[i]), angle);
 
-					vec2 svn = vec2(sv.x * 5.0 * dx, sv.y * 5.0 * dy);
+					vec2 svn = vec2(sv.x * 2.0 * dx, sv.y * 2.0 * dy);
 					float luminance = texture2D(livingTexture, point+svn).x + texture2D(livingTexture, point+svn).y + texture2D(livingTexture, point+svn).z;
-					dp += 0.003 * (sv/length(sv)) * luminance * wi;	// Multiply vel
+					dp += 0.006 * (sv/length(sv)) * luminance * wi;	// Multiply vel
 				}
 
+				// Adding perlin noise
+				float noise = cnoise(dp);
+				//dp.x += noise * dx;
+				//dp.y += noise * dy;
+
 				// Clamping
-				dp = vec2( clamp(dp.x, -dx * 2.0, dx * 2.0), clamp(dp.y * 2.0, -dy * 2.0, dy * 2.0) );
+				//dp = vec2( clamp(dp.x, -dx * 5.5, dx * 5.5), clamp(dp.y, -dy * 5.5, dy * 5.5) );
 
 				return dp;
 
@@ -101,16 +218,17 @@
 				vec4 SE = texture2D(antCopyTexture, vec2(vUv.x - dx, vUv.y + dy));
 				*/
 
+
 				gl_FragColor = vec4(0.0, 0.0, 0.0, 0.0);
 
 				vec4 ant = vec4(0.0, 0.0, 0.0, 0.0);
 
-				for(int i = 0; i < 7; i++)
-					for(int j = 0; j < 7; j++) {
-						if(j != 3 || i != 3) {
+				for(int i = 0; i < W_DIM; i++)
+					for(int j = 0; j < W_DIM; j++) {
+						if(j != W_DIM/2+1 || i != W_DIM/2+1) {
 							vec2 p = vUv;
-							p.x += (float(i)-3.0) * dx;
-							p.y += (float(j)-3.0) * dy;
+							p.x += (float(i)-float(W_DIM/2+1)) * dx;
+							p.y += (float(j)-float(W_DIM/2+1)) * dy;
 							vec4 a = texture2D(antTexture, p);
 
 							if(a.z != 0.0 && p.x >= 0.0 && p.x <= 1.0 && p.y >= 0.0 && p.y <= 1.0) {
@@ -121,6 +239,7 @@
 									ant = texture2D(antTexture, p);
 
 									vec2 d = normalize(dir) / 2.0;
+									//vec2 d = vec2(-0.5, -0.5);
 									gl_FragColor = vec4(d.x + 0.5, d.y + 0.5, 1.0, 1.0);
 								}
 							}
@@ -178,13 +297,17 @@
 
 		<script type="x-shader/x-fragment" id="livingFragmentShader">
 			uniform sampler2D livingTexture;
+			uniform sampler2D antTexture;
 
 			varying vec2 vUv;
 
 			void main() {
 				vec2 p = vUv;
-				gl_FragColor = texture2D(livingTexture, p);// Displays Nothing
-				//gl_FragColor = vec4(0.5, 0.2, 1.0, 1.0); // Works; Displays Flat Color
+				vec4 ant = texture2D(antTexture, p);
+				if(ant.z != 0.0)
+					gl_FragColor = vec4(0.0, 0.0, 0.0, 0.0);
+				else
+					gl_FragColor = texture2D(livingTexture, p);
 			}
 		</script>
 
@@ -288,12 +411,17 @@
 			var noiseMin;
 			var noiseMax;
 			var initialPositions;
-			var sensoryVectors = [new THREE.Vector2( 0.1,  0.0 ),
-								  new THREE.Vector2( 0.1,  0.4 ),
-								  new THREE.Vector2( 0.1,  0.8 ),
-								  new THREE.Vector2( 0.1, -0.4 ),
-								  new THREE.Vector2( 0.1, -0.8 )];
-			var sensoryWeights = [0.1, 0.25, 0.2, 0.25, 0.2];
+			var sensoryVectors = [new THREE.Vector2( 1.0,  0.0 ),
+								  new THREE.Vector2( 1.0,  1.0 ),
+								  new THREE.Vector2( 1.0,  4.0 ),
+								  new THREE.Vector2( 1.0,  10.0 ),
+								  new THREE.Vector2( 1.0,  100.0 ),
+				    		      new THREE.Vector2( 1.0,  -5.0 ),
+								  new THREE.Vector2( 1.0,  -20.0 ),
+								  new THREE.Vector2( 1.0,  -100.0 ),
+								  new THREE.Vector2( 1.0,  -200.0 )
+			];
+			var sensoryWeights = [0.0, 0.0, 0.4, 0.4, 0.4, 0.0, 0.4, 0.4, 0.4];
 			 
 			init();
 			//animate();
@@ -337,7 +465,8 @@
 				};
 
 				livingUniforms = {
-					livingTexture: { type: "t", value: initLiving }
+					livingTexture: { type: "t", value: undefined },
+					antTexture: { type: "t", value: ant }
 				};
 
 				antCopyUniforms = {
@@ -485,6 +614,7 @@
 
 				var initLiving = THREE.ImageUtils.loadTexture("image/girl.jpg", {}, function() {
 					antUniforms.livingTexture.value = initLiving;
+					livingUniforms.livingTexture.value = initLiving;
 					animate();
 				});
 			}
@@ -521,17 +651,25 @@
 				ant = new THREE.WebGLRenderTarget( window.innerWidth, window.innerHeight, { minFilter: THREE.LinearFilter, magFilter: THREE.NearestFilter, format: THREE.RGBFormat } );
 				renderer.render( antScene, camera, ant, true);
 
-				finalUniforms.paintingTexture.value = ant;
+				finalUniforms.paintingTexture.value = living;
 				finalMesh.material.needsUpdate = true;
 
-				/*
+
 				// Update living
+
+				livingUniforms.antTexture.value = ant;
+				livingMesh.material.needsUpdate = true;
+
 				living = new THREE.WebGLRenderTarget( window.innerWidth, window.innerHeight, { minFilter: THREE.LinearFilter, magFilter: THREE.NearestFilter, format: THREE.RGBFormat } );
 				renderer.render( livingScene, camera, living, true);
 
 				livingUniforms.livingTexture.value = living;
 				livingMesh.material.needsUpdate = true;
 
+				antUniforms.livingTexture.value = living;
+				antMesh.material.needsUpdate = true;
+
+				/*
 				// Update painting
 				renderer.render( paintingScene, camera, painting, true);
 				*/
