--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		</script>
 
 		<script type="x-shader/x-fragment" id="randomFragmentShader">
+			uniform float initialEnergy;
 
 			varying vec2 vUv;
 
@@ -27,15 +28,15 @@
 			void main() {
 				/*
 				if(rand(vUv) < 0.000000000000000000001) {
-					gl_FragColor = vec4(1,0,1,1);
+					gl_FragColor = vec4(1,0,initialEnergy,1);
 				}
 				else {
 					gl_FragColor = vec4(0,0,0,0);
 				}
 				*/
 
-				if(vUv.x > 0.5 && vUv.x < 0.55 && vUv.y > 0.5 && vUv.y < 0.55) {
-					gl_FragColor = vec4(1,0,1,1);
+				if(vUv.x > 0.546 && vUv.x < 0.55 && vUv.y > 0.546 && vUv.y < 0.55) {
+					gl_FragColor = vec4(1,0,initialEnergy,1);
 				}
 				else {
 					gl_FragColor = vec4(0,0,0,0);
@@ -58,13 +59,23 @@
 			#define W_DIM 23
 			#define N_SENS 9
 
+			uniform float gain;
+			uniform float decay;
+
 			uniform sampler2D antTexture;
 			uniform sampler2D livingTexture;
 			uniform vec2 sensoryVectors[N_SENS];
 			uniform float sensoryWeights[N_SENS];
 
+			uniform float descVelMin;
+			uniform float descVelMax;
+
 			uniform float dx;
 			uniform float dy;
+
+			uniform float offspringTreshold;
+
+			uniform float vel;
 
 			varying vec2 vUv;
 
@@ -189,9 +200,9 @@ float pnoise(vec2 P, vec2 rep)
 
 					vec2 sv = rotate(normalize(sensoryVectors[i]), angle);
 
-					vec2 svn = vec2(sv.x * 2.0 * dx, sv.y * 2.0 * dy);
+					vec2 svn = vec2(sv.x * 3.0 * dx, sv.y * 3.0 * dy);
 					float luminance = texture2D(livingTexture, point+svn).x + texture2D(livingTexture, point+svn).y + texture2D(livingTexture, point+svn).z;
-					dp += 0.006 * (sv/length(sv)) * luminance * wi;	// Multiply vel
+					dp += vel * (sv/length(sv)) * luminance * wi;	// Multiply vel
 				}
 
 				// Adding perlin noise
@@ -200,7 +211,7 @@ float pnoise(vec2 P, vec2 rep)
 				//dp.y += noise * dy;
 
 				// Clamping
-				//dp = vec2( clamp(dp.x, -dx * 5.5, dx * 5.5), clamp(dp.y, -dy * 5.5, dy * 5.5) );
+				dp = vec2( clamp(dp.x, -dx * 5.5, dx * 5.5), clamp(dp.y, -dy * 5.5, dy * 5.5) );
 
 				return dp;
 
@@ -240,11 +251,32 @@ float pnoise(vec2 P, vec2 rep)
 
 									vec2 d = normalize(dir) / 2.0;
 									//vec2 d = vec2(-0.5, -0.5);
-									gl_FragColor = vec4(d.x + 0.5, d.y + 0.5, 1.0, 1.0);
+
+									// Calculate energy
+									float luminance = (texture2D(livingTexture, vUv).x + texture2D(livingTexture, vUv).y + texture2D(livingTexture, vUv).z) / 3.0;
+									float previousEnergy = ant.z;
+
+									if(previousEnergy > offspringTreshold)
+										previousEnergy -= offspringTreshold;
+									float energy = (ant.z + luminance * gain) * decay;
+
+									gl_FragColor = vec4(d.x + 0.5, d.y + 0.5, energy, 1.0);
 								}
 							}
 						}
 					}
+
+				// Generate offspring
+
+				ant = texture2D(antTexture, vUv);
+				if(ant.z > offspringTreshold) {
+					vec2 d = vec2(ant.x - 0.5, ant.y - 0.5);
+					float noise = cnoise(vUv); // * (descVelMax - descVelMin) / 2;
+					d = rotate(d, noise);
+					gl_FragColor = vec4(d.x + 0.5, d.y + 0.5, offspringTreshold, 1.0);
+				}
+
+
 
 				//gl_FragColor = vec4(0.5, 0.2, 1.0, 1.0); // Works; Displays Flat Color
 			}
@@ -288,6 +320,8 @@ float pnoise(vec2 P, vec2 rep)
 		<script type="x-shader/x-vertex" id="livingVertexShader">
 			varying vec2 vUv;
 
+
+
 			void main() {
 				vUv = uv;
 
@@ -299,13 +333,21 @@ float pnoise(vec2 P, vec2 rep)
 			uniform sampler2D livingTexture;
 			uniform sampler2D antTexture;
 
+			uniform float dx;
+			uniform float dy;
+
 			varying vec2 vUv;
 
 			void main() {
 				vec2 p = vUv;
+
 				vec4 ant = texture2D(antTexture, p);
-				if(ant.z != 0.0)
-					gl_FragColor = vec4(0.0, 0.0, 0.0, 0.0);
+				if(ant.z != 0.0) {
+					gl_FragColor = texture2D(livingTexture, p);
+					gl_FragColor.x -= 0.3;
+					gl_FragColor.y -= 0.3;
+					gl_FragColor.z -= 0.3;
+				}
 				else
 					gl_FragColor = texture2D(livingTexture, p);
 			}
@@ -396,18 +438,19 @@ float pnoise(vec2 P, vec2 rep)
 			var finalUniforms;
 
 			// Parameters
-			var gain;
-			var decay;
+			var gain = 0.8;
+			var decay = 0.8;
 			var consRate;
 			var depositRate;
 			var depositTransp;
 			var dTranspMax;
 			var dTranspMin;
-			var initialEnergy;
+			var initialEnergy = 1;
 			var deathTreshold;
-			var descVelMin;
-			var descVelMax;
-			var vel;
+			var offspringTreshold = 1;
+			var descVelMin = -1;
+			var descVelMax =  1;
+			var vel = 0.002;
 			var noiseMin;
 			var noiseMax;
 			var initialPositions;
@@ -417,11 +460,11 @@ float pnoise(vec2 P, vec2 rep)
 								  new THREE.Vector2( 1.0,  10.0 ),
 								  new THREE.Vector2( 1.0,  100.0 ),
 				    		      new THREE.Vector2( 1.0,  -5.0 ),
-								  new THREE.Vector2( 1.0,  -20.0 ),
-								  new THREE.Vector2( 1.0,  -100.0 ),
-								  new THREE.Vector2( 1.0,  -200.0 )
+								  new THREE.Vector2( 1.0,  -7.0 ),
+								  new THREE.Vector2( 1.0,  -10.0 ),
+								  new THREE.Vector2( 1.0,  -100.0 )
 			];
-			var sensoryWeights = [0.0, 0.0, 0.4, 0.4, 0.4, 0.0, 0.4, 0.4, 0.4];
+			var sensoryWeights = [0.0, 0.3, 0.6, 0.4, 0.4, 0.2, 0.3, 0.4, 0.4];
 			 
 			init();
 			//animate();
@@ -458,6 +501,7 @@ float pnoise(vec2 P, vec2 rep)
 
 				// Create uniforms
 				randomUniforms = {
+						initialEnergy: { type: "f", value: initialEnergy}
 				};
 
 				paintingUniforms = {
@@ -466,7 +510,9 @@ float pnoise(vec2 P, vec2 rep)
 
 				livingUniforms = {
 					livingTexture: { type: "t", value: undefined },
-					antTexture: { type: "t", value: ant }
+					antTexture: { type: "t", value: ant },
+					dx: { type: "f", value: 1/window.innerWidth},
+					dy: { type: "f", value: 1/window.innerHeight},
 				};
 
 				antCopyUniforms = {
@@ -485,6 +531,10 @@ float pnoise(vec2 P, vec2 rep)
 					decay: {type: "f", value: decay},
 					sensoryVectors: {type: "v2v", value: sensoryVectors},
 					sensoryWeights: {type: "fv1", value: sensoryWeights},
+					descVelMin: {type: "f", value: descVelMin},
+					descVelMax: {type: "f", value: descVelMax},
+					offspringTreshold: {type: "f", value: offspringTreshold},
+					vel: {type: "f", value: vel},
 				};
 
 				finalUniforms = {
